--- a/assets/css/leaflet.css
+++ b/assets/css/leaflet.css
@@ -494,7 +494,12 @@
 .leaflet-popup-content-wrapper {
     padding: 1px;
     text-align: left;
-    border-radius: 12px;
+    border-radius: 6px;
+}
+.rtl .leaflet-popup-content-wrapper {
+    direction: rtl;
+    text-align: right;
+    font-family: Tahoma;
 }
 .leaflet-popup-content {
     margin: 13px 19px;
@@ -527,9 +532,9 @@
 }
 .leaflet-popup-content-wrapper,
 .leaflet-popup-tip {
-    background: white;
-    color: #333;
-    box-shadow: 0 3px 14px rgba(0, 0, 0, 0.4);
+    background: #f1f1f1;
+    color: #555;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
 }
 .leaflet-container a.leaflet-popup-close-button {
     position: absolute;
@@ -545,6 +550,10 @@
     text-decoration: none;
     font-weight: bold;
     background: transparent;
+}
+.rtl .leaflet-container a.leaflet-popup-close-button {
+    right: auto;
+    left: 0;
 }
 .leaflet-container a.leaflet-popup-close-button:hover {
     color: #999;
