--- a/assets/css/leaflet.css
+++ b/assets/css/leaflet.css
@@ -521,20 +521,20 @@
     width: 17px;
     height: 17px;
     padding: 1px;
-
     margin: -10px auto 0;
-
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     -o-transform: rotate(45deg);
     transform: rotate(45deg);
+    background-color: #114890 !important;
 }
 .leaflet-popup-content-wrapper,
 .leaflet-popup-tip {
     background: #f1f1f1;
     color: #555;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+    border-bottom: 3px solid #114890;
 }
 .leaflet-container a.leaflet-popup-close-button {
     position: absolute;
